<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:background="?attr/selectableItemBackground">

    <TextView android:id="@android:id/title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="16dp"
              android:layout_marginStart="16dp"
              android:layout_marginTop="16dp"
              android:ellipsize="marquee"
              android:fadingEdge="horizontal"
              android:maxLines="1"
              android:textColor="?android:attr/textColorPrimary"
              android:textSize="16sp"/>

    <TextView
        android:id="@android:id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:maxLines="10"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:maxLines="1"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="14sp"/>

</LinearLayout>